eks/demo/.cache/manifests/manifests-7a373809a663ded140f9b70a3e879a39f6e88479/gcp/iap-ingress/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: $(issuer)
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.global-static-ip-name: $(ipName)
    kubernetes.io/tls-acme: "true"
    networking.gke.io/managed-certificates: gke-certificate
  name: envoy-ingress
spec:
  rules:
  - host: $(hostname)
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /*
